resolved problem with email adress showing off page on mobile view in footer and made navbar fixed to the top of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,11 @@ footer {
     display: inline-block;
 }
 
+.col-sm-6 h5 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
 .social-links {
     padding-bottom: 10px;
 }
